syntax = "proto3";
package mattnworb.helloworld.v1;

option java_package = "com.mattnworb.helloworld.v1";

service HelloWorldService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse);
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}
